--- a/home.html
+++ b/home.html
@@ -10,17 +10,8 @@
             font-family: Arial, sans-serif;
             display: flex;
         }
-        .sidebar {
-            width: 60px;
-            background-color: #2275D3;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 10px;
-            height: 100vh;
-        }
         .sidebar i {
-            color: white;
+            color: black;
             font-size: 20px;
             margin: 35px 0;
             cursor: pointer;
@@ -39,7 +30,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #2275D3;
+            background-color: #F9FAFB;
             padding: 10px 20px;
             color: white;
 			font-weight: bold;
@@ -68,8 +59,8 @@
             padding: 8px;
             border-radius: 5px;
             border: none;
-            background-color: #1e6ab5;
-            color: white;
+            background-color: #e5e9ed;
+            color: black;
 			text-align: center;
         }
         .search-bar input::placeholder {
@@ -92,13 +83,13 @@
 		
 		    /* Sidebar styling */
     .sidebar {
-        width: 100px;
-        background-color: #2275D3;
+        width: 150px;
+        background-color: #F9FAFB;
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-top: 10px;
-        height: 100vh;
+        height: 200vh;
         position: relative;
     }
 	.menu .user, .menu .profile {
@@ -109,7 +100,7 @@
             margin-left: 15px;
         }
 	.menu .user a, .menu .profile a {
-            color: white;
+            color: black;
             text-decoration: none;
             display: flex;
             align-items: center;
@@ -136,7 +127,7 @@
         top: 40px;
         left: 60px; /* Adjust to position dropdown beside the sidebar */
         width: 200px;
-        background-color: #2275D3;
+        background-color: #F9FAFB;
         border-radius: 5px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         z-index: 1;
@@ -150,7 +141,7 @@
 
     /* Styling for dropdown items */
     .dropdown-content div {
-        color: white;
+        color: black;
         padding: 10px;
         cursor: pointer;
     }
@@ -218,12 +209,10 @@
     display: table;
     clear: both;
 	}
-    .apiiq-text {
-            font-size: 24px;
-            font-weight: bold;
-            color: white;
-            padding: 5px 10px;
-        }
+    .logo {
+        width: 70px; /* Adjust size as needed */
+        height: auto;
+    }
 	
 	
     </style>
@@ -236,13 +225,9 @@
     <div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
         <i class="fas fa-chart-line"></i>
         <div class="dropdown-content">
-	    <div class="header">Lead Source</div>
-            <div>Webinar</div>
-            <div>Event</div>
-            <div>Website</div>
-            <div>Social</div>
-            <div>Files</div>
-			<div>Others</div>
+	    <div class="header">Incoming Data</div>
+            <div>File Upload</div>
+            <div>App Sync</div>
         </div>
     </div>
 	<div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
@@ -259,13 +244,20 @@
             <i class="fas fa-plug"></i>
             <div class="dropdown-content">
                 <div class="header">Integration Setup</div>
-				<div>AI-Powered Validation</div>
+				<div>Fields</div>
+                <div>Lead Sources</div>
                 <div>CRM</div>
-                <div>Mapping</div>
-                <div>Fields</div>
-                <div>Validation Rules</div>
-				<div>Domain Suppression</div>
+                <div>Apps</div>
             </div>
+    </div>
+    <div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
+        <i class="fas fa-project-diagram"></i>
+        <div class="dropdown-content">
+            <div class="header">Workflow</div>
+            <div>Email Alerts</div>
+            <div>Reports</div>
+            <div>Campaigns</div>
+        </div>
     </div>
     <div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
         <i class="fas fa-file-alt"></i>
@@ -278,10 +270,20 @@
     <div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
         <i class="fas fa-tools"></i>
         <div class="dropdown-content">
-            <div class="header">IQ Tools</div>
+            <div class="header">Database IQ</div>
             <div>Excel IQ</div>
             <div>Table IQ</div>
-            <div>Data IQ</div>
+            <div>Field Mapping IQ</div>
+        </div>
+    </div>
+    <div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
+        <i class="fas fa-robot"></i>
+        <div class="dropdown-content">
+            <div class="header">AI+API</div>
+            <div>Lead Scoring</div>
+            <div>Email Validation</div>
+            <div>Enrichment</div>
+            <div>Intent</div>
         </div>
     </div>
 	<div class="dropdown" onmouseenter="showDropdown(this)" onmouseleave="hideDropdown(this)">
@@ -290,7 +292,7 @@
                 <div class="header">Settings</div>
                 <div>Subscription(Upgrade)</div>
                 <div>User Management</div>
-                <div>Rules</div>
+                <div>Support</div>
             </div>
     </div>
 	</div>
@@ -298,7 +300,7 @@
     <div class="main-content">
         <div class="header">
             <div class="home-button">
-				<a href="#" class="apiiq-text">APiiQ</a>
+				<a href="#"> <img src="XdotLogo.jpeg" alt="APiiQ Logo" class="logo"> </a>
 			</div>
             <div class="search-bar">
                 <input type="text" placeholder="Search">
