Updated home.html file

--- a/home.html
+++ b/home.html
@@ -290,8 +290,8 @@
 					<div class="submenu" onmouseenter="showSubmenu(this)" onmouseleave="hideSubmenu(this)">
 				App Sync
 				<div class="submenu-content">
-					<div><a href="SendReceiveClient.png" target="_blank">Sources</a></div>
-					<div><a href="SendReceiveClient.png" target="_blank">Destination</a></div>
+					<div><a href="SendReceiveClient.PNG" target="_blank">Sources</a></div>
+					<div><a href="SendReceiveClient.PNG" target="_blank">Destination</a></div>
 				</div>
 			</div>
 				</div>
